--- a/Project1-RMarkdown.Rmd
+++ b/Project1-RMarkdown.Rmd
@@ -6,37 +6,43 @@ output:
   pdf_document:
     toc: true
     toc_depth: 3
-header-includes:
-  - \usepackage{booktabs}
-  - \usepackage{longtable}
-  - \usepackage{array}
-  - \usepackage{multirow}
-  - \usepackage{wrapfig}
-  - \usepackage{float}
-  - \usepackage{colortbl}
-  - \usepackage{pdflscape}
-  - \usepackage{tabu}
-  - \usepackage{threeparttable}
-  - \usepackage{threeparttablex}
-  - \usepackage[normalem]{ulem}
-  - \usepackage{makecell}
-  - \usepackage{xcolor}
+
+# header-includes:
+#   - \usepackage{booktabs}
+#   - \usepackage{longtable}
+#   - \usepackage{array}
+#   - \usepackage{multirow}
+#   - \usepackage{wrapfig}
+#   - \usepackage{float}
+#   - \usepackage{colortbl}
+#   - \usepackage{pdflscape}
+#   - \usepackage{tabu}
+#   - \usepackage{threeparttable}
+#   - \usepackage{threeparttablex}
+#   - \usepackage[normalem]{ulem}
+#   - \usepackage{makecell}
+#   - \usepackage{xcolor}
 ---
 ```{r setup, include = FALSE}
 
 #### Load necessary packages ####
 # * These packages are not necessary to complete the assignment and or only used
 #   to provide an example.
-packages <- c("knitr", "kableExtra", "magrittr", "readr", "geosphere")
 
-install_me <- packages[!(packages %in% installed.packages()[, "Package"])]
-if (length(install_me)) install.packages(install_me)
+###
+### Running into errors for this block of code whenever I try to knit. Removing for the time being. -ALY
+###
 
-library(knitr)
-library(kableExtra)
-library(magrittr)
-library(readr)
-library(geosphere)
+# packages <- c("knitr", "kableExtra", "magrittr", "readr", "geosphere")
+
+# install_me <- packages[!(packages %in% installed.packages()[, "Package"])]
+# if (length(install_me)) install.packages(install_me)
+
+# library(knitr)
+# library(kableExtra)
+# library(magrittr)
+# library(readr)
+# library(geosphere)
 ```
 
 ## Background
@@ -84,7 +90,7 @@ Date fields are stored in MM/DD/YYYY format.
 
 ```
 
-### GitHub Log
-```{bash gitlog}
-git log --pretty=format:"%nSubject: %s%nAuthor: %aN%nDate: %aD%nBody: %b"
-```
+<!-- ### GitHub Log -->
+<!-- ```{bash gitlog} -->
+<!-- git log --pretty=format:"%nSubject: %s%nAuthor: %aN%nDate: %aD%nBody: %b" -->
+<!-- ``` -->
