Update file to main
Merged the differences between two files. Ready to be committed to main.

--- a/Project1-RMarkdown.Rmd
+++ b/Project1-RMarkdown.Rmd
@@ -6,22 +6,21 @@ output:
   pdf_document:
     toc: true
     toc_depth: 3
-
-# header-includes:
-#   - \usepackage{booktabs}
-#   - \usepackage{longtable}
-#   - \usepackage{array}
-#   - \usepackage{multirow}
-#   - \usepackage{wrapfig}
-#   - \usepackage{float}
-#   - \usepackage{colortbl}
-#   - \usepackage{pdflscape}
-#   - \usepackage{tabu}
-#   - \usepackage{threeparttable}
-#   - \usepackage{threeparttablex}
-#   - \usepackage[normalem]{ulem}
-#   - \usepackage{makecell}
-#   - \usepackage{xcolor}
+header-includes:
+  - \usepackage{booktabs}
+  - \usepackage{longtable}
+  - \usepackage{array}
+  - \usepackage{multirow}
+  - \usepackage{wrapfig}
+  - \usepackage{float}
+  - \usepackage{colortbl}
+  - \usepackage{pdflscape}
+  - \usepackage{tabu}
+  - \usepackage{threeparttable}
+  - \usepackage{threeparttablex}
+  - \usepackage[normalem]{ulem}
+  - \usepackage{makecell}
+  - \usepackage{xcolor}
 ---
 ```{r setup1, include = FALSE}
 knitr::opts_chunk$set(include = FALSE)
@@ -30,20 +29,23 @@ knitr::opts_chunk$set(include = FALSE)
 # * These packages are not necessary to complete the assignment and or only used
 #   to provide an example.
 
-###
-### Running into errors for this block of code whenever I try to knit. Removing for the time being. -ALY
-###
-
-# packages <- c("knitr", "kableExtra", "magrittr", "readr", "geosphere")
+# packages <- c("knitr", "kableExtra", "magrittr", "readr", "geosphere", "ggplot2", "tidyverse", "maps", "mapdata", "mapproj")
 
 # install_me <- packages[!(packages %in% installed.packages()[, "Package"])]
 # if (length(install_me)) install.packages(install_me)
 
-# library(knitr)
-# library(kableExtra)
-# library(magrittr)
-# library(readr)
+library(knitr)
+library(kableExtra)
+library(magrittr)
+library(readr)
 library(geosphere)
+
+#  These are the libraries I used for Project 1
+library(ggplot2)
+library(dplyr)
+library(maps)
+library(mapproj)
+library(readr)
 ```
 
 <!-- load the excel files into named data frames -->
@@ -53,11 +55,11 @@ library(geosphere)
 # file links are directed to GitHub source
 # NOTE - .csv files need to be saved to the same directory as this .Rmd file
 
-dfConfirmed <- read.csv("./time_series_covid19_confirmed_global.csv", stringsAsFactors = FALSE)
-
-dfDeaths <- read.csv("./time_series_covid19_deaths_global.csv", stringsAsFactors = FALSE)
-
-dfRecovered <- read.csv("./time_series_covid19_recovered_global.csv", stringsAsFactors = FALSE)
+# dfConfirmed <- read.csv("./time_series_covid19_confirmed_global.csv", stringsAsFactors = FALSE)
+# 
+# dfDeaths <- read.csv("./time_series_covid19_deaths_global.csv", stringsAsFactors = FALSE)
+# 
+# dfRecovered <- read.csv("./time_series_covid19_recovered_global.csv", stringsAsFactors = FALSE)
 ```
 
 
@@ -83,9 +85,78 @@ Date fields are stored in MM/DD/YYYY format.
 <!-- CSIT-165's first objective is to determine where COVID-19 originated from. Predict where the origin started based on the number of cases on the first recorded day for confirmation, recovery, and death. Why do you believe this area to be the origin? Show this is the origin using a conditional statement if possible. -->
 
 ### Objective 1
-```{r ob1-01, echo=TRUE}
+```{r ob1-01}
+# Identify working directory and set working directory to cloned repo
 
+#getwd()
+#setwd("C:/Users/micha/GitHub/Group-Project-1/Group-Project-1-Alex-Mike")
+
+# Assign variable for file names
+
+filename = "time_series_covid19_deaths_global.csv"
+filename_rec = "time_series_covid19_recovered_global.csv"
+filename_conf = "time_series_covid19_confirmed_global.csv"
+
+# Read files and set variables for with the covid19 global deaths, recoveries, and confirmed cases, respectively
+deaths <- read_delim(file = filename, delim = ",")
+head(deaths)
+
+recovered <- read_delim(file = filename_rec, delim = ",")
+head(recovered)
+
+confirmed <- read_delim(file = filename_conf, delim = ",")
+head(confirmed)
+
+# Review of datasets revealed ordered columns with earliest date is 1/22/20 which is column 5 in the datasets
+# Select and view rows from datasets where that have positive number (greater than 0) of confirmed cases on 1/22/20
+cases <- confirmed[confirmed$`1/22/20` > 0, 1:5]
+head(cases)
+
+# Sort cases to see where the highest number of cases are on the initial date
+cases_sort <- cases[order(cases$'1/22/20', decreasing = TRUE),]
+head(cases_sort)
+
+# Create a quick function to determine the max value on initial date for each file
+
+origin <- function(df){
+  print(df[which.max(df$`1/22/20`),1:2])
+}
+
+# Check to country and province for each file with highest initial occurences
+
+origin(confirmed)
+origin(deaths)
+origin(recovered)
 ```
+
+
+```{r ob1-02}
+# Map the location of the intial occurences with bubble chart
+
+
+CH <- map_data("world") %>% filter(region=="China")
+
+# Create a data frame with data from China only
+cases_china <- cases_sort[cases_sort$`Country/Region` == "China",]
+print(cases_china, n=Inf)
+
+# Change column names to make it easier to use mapping functions
+
+newcolnames <- c("Province","Country","lat","long","cases")
+colnames(cases_china) <- newcolnames
+head(cases_china)
+
+
+# Use ggplot to plot top locations of initial confirmed cases using cases for bubble size
+ggplot() +
+  geom_polygon(data = CH, aes(x=long, y = lat, group = group), fill="grey", alpha=0.3) +
+  geom_point(data=cases_china, aes(x=long, y=lat, alpha=cases, size = cases)) +
+  #geom_text_repel(data=cases_china %>% head(10), aes(x=long, y=lat, label=Province), size=3) +
+  #geom_point(data=cases_china_map %>% head(3), aes(x=long, y=lat), color="red", size=2) +
+  theme(legend.position="none")
+```
+
+
 
 <!-- Objective 2 -->
 <!-- Where is the most recent area to have a first confirmed case? If appropriate, please list all areas that had a first confirmed case if they occurred on the same day. -->
